--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.1.1",
     "element-plus": "^2.2.14",
+    "sass": "^1.54.5",
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/node": "^18.7.12",
     "@vitejs/plugin-vue": "^3.0.3",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.11.2",
