--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^9.1.1",
     "element-plus": "^2.2.14",
+    "path-browserify": "^1.0.1",
     "pinia": "^2.0.20",
     "sass": "^1.54.5",
     "vue": "^3.2.37",
